--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/lasagna.html">Lasagna recipe</a>
+  <ul>
+    <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+    <li><a href="recipes/feta-cheese-foldovers.html">Feta Cheese Foldovers</a></li>
+    <li><a href=""></a></li>
+  </ul>
 </body>
 </html>
