--- a/recipes/feta-cheese-foldovers.html
+++ b/recipes/feta-cheese-foldovers.html
@@ -1,3 +1,4 @@
+<a href="../index.html">Back to menu</a>
 <h1>Feta Cheese Foldovers</h1>
 <img src="https://www.allrecipes.com/thmb/OLWndhXNmPfH1pSf6Z5fQs5z0pw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5271343-463521f6e6f74aef8bb6e57df5eb16ef.jpg" alt="A lasagna on a plate" width="610">
 
