--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
     <li><a href="recipes/feta-cheese-foldovers.html">Feta Cheese Foldovers</a></li>
-    <li><a href=""></a></li>
+    <li><a href="recipes/savory-pumpkin-hummus.html"></a>Savory Pumpkin Hummus</li>
   </ul>
 </body>
 </html>
