--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
   <title>Odin-recipes</title>
 </head>
-<body>
-  <h1>Odin Recipes</h1>
-  <ul>
-    <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-    <li><a href="recipes/feta-cheese-foldovers.html">Feta Cheese Foldovers</a></li>
-    <li><a href="recipes/savory-pumpkin-hummus.html">Savory Pumpkin Hummus</a></li>
+<body class="body-flex">
+  <h1 class="heading-main">Odin Recipes</h1>
+  <ul class="underloand-list">
+    <li class="item-list"><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+    <li class="item-list"><a href="recipes/feta-cheese-foldovers.html">Feta Cheese Foldovers</a></li>
+    <li class="item-list"><a href="recipes/savory-pumpkin-hummus.html">Savory Pumpkin Hummus</a></li>
   </ul>
 </body>
 </html>
