Create styles for recipes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="body-flex">
   <h1 class="heading-main">Odin Recipes</h1>
   <ul class="underloand-list">
-    <li class="item-list"><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-    <li class="item-list"><a href="recipes/feta-cheese-foldovers.html">Feta Cheese Foldovers</a></li>
-    <li class="item-list"><a href="recipes/savory-pumpkin-hummus.html">Savory Pumpkin Hummus</a></li>
+    <li class="item-list"><a class="anchor-main" href="recipes/lasagna.html">Lasagna recipe</a></li>
+    <li class="item-list"><a class="anchor-main" href="recipes/feta-cheese-foldovers.html">Feta Cheese Foldovers</a></li>
+    <li class="item-list"><a class="anchor-main" href="recipes/savory-pumpkin-hummus.html">Savory Pumpkin Hummus</a></li>
   </ul>
 </body>
 </html>
