--- a/recipes/feta-cheese-foldovers.html
+++ b/recipes/feta-cheese-foldovers.html
@@ -1,31 +1,35 @@
-<a href="../index.html">Back to menu</a>
-<h1>Feta Cheese Foldovers</h1>
-<img
-  src="https://www.allrecipes.com/thmb/OLWndhXNmPfH1pSf6Z5fQs5z0pw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5271343-463521f6e6f74aef8bb6e57df5eb16ef.jpg"
-  alt="A lasagna on a plate" width="610">
+<link rel="stylesheet" href="../main.css">
 
-<h3>Description</h3>
-<p>Thanksgiving appetizers get your holiday meal off to a delicious start. We dug deep into our treasure trove of
-  appetizer recipes and found that these top-rated snacks and apps are the best of the best, including seasonal
-  sensations like stuffed mushrooms and cranberry meatballs, plus Thanksgiving-friendly dips, cheesy puffs, and assorted
-  bite-size delights.</p>
-
-<h4>Ingredients</h4>
-<ul>
-  <li>8 ounces feta cheese, crumbled</li>
-  <li>3 tablespoons finely chopped green onions</li>
-  <li>1 egg, beaten</li>
-  <li>1 (17.5 ounce) package frozen puff pastry, thawed</li>
-  <li>1 egg yolk, beaten with 1 teaspoon water</li>
-</ul>
-
-
-<h4>Steps</h4>
-<ol>
-  <li>Preheat oven to 375 degrees F (190 degrees C).</li>
-  <li>In a small bowl, blend feta cheese, green onions, and egg. Cut pastry into 12 (3 inch) squares. Place a mounded
-    tablespoon of feta mixture in the center of each square. Moisten edges with water, and fold pastry over filling to
-    form a triangle. Press edges together firmly with a fork to seal. Lightly brush pastries with the egg yolk mixture.
-  </li>
-  <li>Bake for 20 minutes in the preheated oven, or until golden brown. Serve warm or at room temperature.</li>
-</ol>
+<div class="content-recipe">
+  <a href="../index.html">Back to menu</a>
+  <h1>Feta Cheese Foldovers</h1>
+  <img
+    src="https://www.allrecipes.com/thmb/OLWndhXNmPfH1pSf6Z5fQs5z0pw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5271343-463521f6e6f74aef8bb6e57df5eb16ef.jpg"
+    alt="A lasagna on a plate" width="610">
+  
+  <h3>Description</h3>
+  <p>Thanksgiving appetizers get your holiday meal off to a delicious start. We dug deep into our treasure trove of
+    appetizer recipes and found that these top-rated snacks and apps are the best of the best, including seasonal
+    sensations like stuffed mushrooms and cranberry meatballs, plus Thanksgiving-friendly dips, cheesy puffs, and assorted
+    bite-size delights.</p>
+  
+  <h4>Ingredients</h4>
+  <ul>
+    <li>8 ounces feta cheese, crumbled</li>
+    <li>3 tablespoons finely chopped green onions</li>
+    <li>1 egg, beaten</li>
+    <li>1 (17.5 ounce) package frozen puff pastry, thawed</li>
+    <li>1 egg yolk, beaten with 1 teaspoon water</li>
+  </ul>
+  
+  
+  <h4>Steps</h4>
+  <ol>
+    <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+    <li>In a small bowl, blend feta cheese, green onions, and egg. Cut pastry into 12 (3 inch) squares. Place a mounded
+      tablespoon of feta mixture in the center of each square. Moisten edges with water, and fold pastry over filling to
+      form a triangle. Press edges together firmly with a fork to seal. Lightly brush pastries with the egg yolk mixture.
+    </li>
+    <li>Bake for 20 minutes in the preheated oven, or until golden brown. Serve warm or at room temperature.</li>
+  </ol>
+</div>
